Added paper by Gregg Hallinan (2013) to the bibliography.

--- a/biblio.bib
+++ b/biblio.bib
@@ -9,6 +9,27 @@
 
 
 
+@ARTICLE{hallinan_et_al2013,
+   author = {{Hallinan}, G. and {Sirothia}, S.~K. and {Antonova}, A. and 
+	{Ishwara-Chandra}, C.~H. and {Bourke}, S. and {Doyle}, J.~G. and 
+	{Hartman}, J. and {Golden}, A.},
+    title = "{Looking for a Pulse: A Search for Rotationally Modulated Radio Emission from the Hot Jupiter, {$\tau$} Bo{\"o}tis b}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1210.8259},
+ primaryClass = "astro-ph.EP",
+ keywords = {planets and satellites: aurorae, planets and satellites: detection, planets and satellites: individual: {$\tau$} Bo{\"o}tis b, planets and satellites: magnetic fields, radio continuum: planetary systems},
+     year = 2013,
+    month = jan,
+   volume = 762,
+      eid = {34},
+    pages = {34},
+      doi = {10.1088/0004-637X/762/1/34},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...762...34H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @article{dumm1998,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1998NewA....3..137D},
