fixed typo in B^{2/3}

--- a/ms.tex
+++ b/ms.tex
@@ -545,7 +545,7 @@ RGHJ & $M_J$ & $B_J$ & 5 AU &  0.4 days \\ \hline
 \label{ss:counterintuitive}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Per Eq.~(\ref{eq:Pkinp}), the total emitted power scales with $B^(2/3)$.
+According to Eq.~(\ref{eq:Pkinp}), the total emitted power scales with $B^{2/3}$.
 In detail, it is not obvious how the power spectral density scales with a planet's surface magnetic field, because the emission process involves electrons passing through a wide range of magnetic field conditions (dipolar field strength drops off as $r^{-3}$, and only in an idealized model is a planet a perfect magnetic dipole).
 Nevertheless, a reasonable ansatz is that the radio emission is spread over a range of wavelengths in an approximately scale-independent way.
 In other words, the power spectral density is likely to scale as the total power divided by the cyclotron frequency corresponding to a characteristic field strength where the emission peaks.
