Removed Tony from Acknowledgments

--- a/ms.tex
+++ b/ms.tex
@@ -813,10 +813,9 @@ Alternatively, once we detect both the gravitational perturbation and radio emis
 
 {\sc Acknowledgments}
 
-We thank many people for useful discussions, in particular Tony
-Mroczkowzki.  YF is supported from the Grant-in-Aid No. 25887024 by the Japan Society for the Promotion of Science. 
-DSS gratefully acknowledges support from a fellowship
-from the AMIAS group.  NM acknowledges support from [???].
+YF is supported from the Grant-in-Aid No. 25887024 by the Japan Society for the Promotion of Science.
+DSS gratefully acknowledges support from a fellowship from the AMIAS group.
+NM acknowledges support from [???].
 
 %\newpage
 
