typo corrected. griesmeier2007a is added

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,33 +2,45 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-05-25 00:22:30 +0900 
+%% Created for Yuka Fujii at 2015-05-26 12:10:02 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@ARTICLE{hallinan_et_al2013,
-   author = {{Hallinan}, G. and {Sirothia}, S.~K. and {Antonova}, A. and 
-	{Ishwara-Chandra}, C.~H. and {Bourke}, S. and {Doyle}, J.~G. and 
-	{Hartman}, J. and {Golden}, A.},
-    title = "{Looking for a Pulse: A Search for Rotationally Modulated Radio Emission from the Hot Jupiter, {$\tau$} Bo{\"o}tis b}",
-  journal = {\apj},
-archivePrefix = "arXiv",
-   eprint = {1210.8259},
- primaryClass = "astro-ph.EP",
- keywords = {planets and satellites: aurorae, planets and satellites: detection, planets and satellites: individual: {$\tau$} Bo{\"o}tis b, planets and satellites: magnetic fields, radio continuum: planetary systems},
-     year = 2013,
-    month = jan,
-   volume = 762,
-      eid = {34},
-    pages = {34},
-      doi = {10.1088/0004-637X/762/1/34},
-   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...762...34H},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{griesmeier2007a,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2007P%26SS...55..618G},
+	Author = {{Grie{\ss}meier}, J.-M. and {Preusse}, S. and {Khodachenko}, M. and {Motschmann}, U. and {Mann}, G. and {Rucker}, H.~O.},
+	Date-Added = {2015-05-26 03:09:40 +0000},
+	Date-Modified = {2015-05-26 03:09:54 +0000},
+	Doi = {10.1016/j.pss.2006.01.008},
+	Journal = {\planss},
+	Month = apr,
+	Pages = {618-630},
+	Title = {{Exoplanetary radio emission under different stellar wind conditions}},
+	Volume = 55,
+	Year = 2007,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.pss.2006.01.008}}
 
+@article{hallinan_et_al2013,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...762...34H},
+	Archiveprefix = {arXiv},
+	Author = {{Hallinan}, G. and {Sirothia}, S.~K. and {Antonova}, A. and {Ishwara-Chandra}, C.~H. and {Bourke}, S. and {Doyle}, J.~G. and {Hartman}, J. and {Golden}, A.},
+	Doi = {10.1088/0004-637X/762/1/34},
+	Eid = {34},
+	Eprint = {1210.8259},
+	Journal = {\apj},
+	Keywords = {planets and satellites: aurorae, planets and satellites: detection, planets and satellites: individual: {$\tau$} Bo{\"o}tis b, planets and satellites: magnetic fields, radio continuum: planetary systems},
+	Month = jan,
+	Pages = {34},
+	Primaryclass = {astro-ph.EP},
+	Title = {{Looking for a Pulse: A Search for Rotationally Modulated Radio Emission from the Hot Jupiter, {$\tau$} Bo{\"o}tis b}},
+	Volume = 762,
+	Year = 2013,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/762/1/34}}
 
 @article{dumm1998,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -380,24 +392,7 @@ archivePrefix = "arXiv",
 	Year = 2008,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1017/S1743921308014889}}
 
-@article{griebmeier2004,
-	Abstract = {We study the interaction between the planetary magnetosphere and atmosphere of the close-in extrasolar planets HD 209458b and OGLE-TR-56b with the stellar wind during the evolution of their host stars. Recent astrophysical observations of solar-like stars indicate that the radiation and particle environments of young stars are orders of magnitudes larger than for stars with ages comparable to the sun (˜4.6 Gyr). We model the interaction for the present and for early evolutionary stages, showing that it is possible that ``Hot Jupiters'' have an ionosphere-stellar wind interaction like Venus. Our study suggests that the internal magnetic field of exoplanets orbiting close to their host stars may be very weak due to tidal locking. The magnetic moments can be less than one tenth of the value presently observed for the rapidly rotating planet Jupiter. We find that the stronger stellar wind of younger solar-type stars compresses the magnetosphere to a standoff distance at which the ionized part of the upper atmosphere, hydrodynamically expanded by the XUV-flux, builds an obstacle. Because of a much larger stellar wind particle flux during the first ˜0.5 Gyr after the host stars arrived on the Zero-Age-Main-Sequence, ``Hot Jupiters'' may have not been protected by their intrinsic magnetic fields, even if one neglects the effect of tidal locking. In such a case, the unshielded upper atmosphere will be affected by different ionization and non-thermal ion loss processes. This contributes to the estimated neutral hydrogen loss rates of about ≥ 1010 g/s of the observed expanded exosphere of HD 209458b \citep{vidal-madjar03} and will be an ionized part of the estimated upper energy-limited neutral hydrogen loss rates of about 1012 g/s \citep{Lammer2003a}.},
-	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-	Adsurl = {http://adsabs.harvard.edu/abs/2004A%26A...425..753G},
-	Author = {{Grie{\ss}meier}, J.-M. and {Stadelmann}, A. and {Penz}, T. and {Lammer}, H. and {Selsis}, F. and {Ribas}, I. and {Guinan}, E.~F. and {Motschmann}, U. and {Biernat}, H.~K. and {Weiss}, W.~W.},
-	Date-Added = {2015-03-30 06:55:08 +0000},
-	Date-Modified = {2015-03-30 06:55:34 +0000},
-	Doi = {10.1051/0004-6361:20035684},
-	Journal = {\aap},
-	Keywords = {stars: planetary systems, stars: winds, outflows, magnetic fields},
-	Month = oct,
-	Pages = {753-762},
-	Title = {{The effect of tidal locking on the magnetospheric and atmospheric evolution of ``Hot Jupiters''}},
-	Volume = 425,
-	Year = 2004,
-	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361:20035684}}
-
-@article{griebmeier2007,
+@article{griesmeier2007b,
 	Abstract = {Context: Close-in giant extrasolar planets (``Hot Jupiters'') are believed to be strong emitters in the decametric radio range. 
 Aims: We present the expected characteristics of the low-frequency magnetospheric radio emission of all currently known extrasolar planets, including the maximum emission frequency and the expected radio flux. We also discuss the escape of exoplanetary radio emission from the vicinity of its source, which imposes additional constraints on detectability. 
 Methods: We compare the different predictions obtained with all four existing analytical models for all currently known exoplanets. We also take care to use realistic values for all input parameters. 
@@ -411,7 +406,7 @@ Appendices A and B are only available in electronic form at http://www.aanda.org
 	Archiveprefix = {arXiv},
 	Author = {{Grie{\ss}meier}, J.-M. and {Zarka}, P. and {Spreeuw}, H.},
 	Date-Added = {2015-03-30 06:53:35 +0000},
-	Date-Modified = {2015-03-30 06:54:52 +0000},
+	Date-Modified = {2015-05-26 03:10:01 +0000},
 	Doi = {10.1051/0004-6361:20077397},
 	Eprint = {0806.0327},
 	Journal = {\aap},
@@ -7043,24 +7038,6 @@ Appendices A and B are only available in electronic form at http://www.aanda.org
 	Title = {{The Origin of Life}},
 	Volume = 16,
 	Year = 1954}
-
-@article{hallinan_et_al2013,
-	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-	Adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...762...34H},
-	Archiveprefix = {arXiv},
-	Author = {{Hallinan}, G. and {Sirothia}, S.~K. and {Antonova}, A. and {Ishwara-Chandra}, C.~H. and {Bourke}, S. and {Doyle}, J.~G. and {Hartman}, J. and {Golden}, A.},
-	Doi = {10.1088/0004-637X/762/1/34},
-	Eid = {34},
-	Eprint = {1210.8259},
-	Journal = {\apj},
-	Keywords = {planets and satellites: aurorae, planets and satellites: detection, planets and satellites: individual: {$\tau$} Bo{\"o}tis b, planets and satellites: magnetic fields, radio continuum: planetary systems},
-	Month = jan,
-	Pages = {34},
-	Primaryclass = {astro-ph.EP},
-	Title = {{Looking for a Pulse: A Search for Rotationally Modulated Radio Emission from the Hot Jupiter, {$\tau$} Bo{\"o}tis b}},
-	Volume = 762,
-	Year = 2013,
-	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/762/1/34}}
 
 @article{hameury_et_al1998,
 	Adsnote = {Provided by the Smithsonian/NASA Astrophysics Data System},
