Split Greater B => lower Fnu line

--- a/ms.tex
+++ b/ms.tex
@@ -539,7 +539,8 @@ RGHJ & $M_J$ & $B_J$ & 5 AU &  0.4 days \\ \hline
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Brighter Implies Harder to See: Greater $B$ Produces Lower $F_\nu$}
+\subsection{Brighter Implies Harder to See:\\
+Greater $B$ Produces Lower $F_\nu$}
 \label{ss:counterintuitive}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
