--- a/ms.tex
+++ b/ms.tex
@@ -459,7 +459,7 @@ In this regime, there are a number of current and near-future radio wave detecto
 \label{ss:brightness}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Based on the assumption that the radio emission is proportional to the input kinetic energy (equation (\ref{eq:Pinp_kin})), the scaling of the radio emission is expanded as follows:
+Based on the assumption that the radio emission is proportional to the input kinetic energy (equation \ref{eq:Pinp_kin}), the scaling of the radio emission is expanded as follows:
 %%%
 \begin{eqnarray}
 P_{\rm k,\,inp} &=& nv^3 r_s^2 = n v^3 \left( \frac{B^2}{2\pi m_{\rm p}nv^2} \right)^{1/3}  \\
