Description of Section 4 is edited so as to be consistent with Figure 3

--- a/ms.tex
+++ b/ms.tex
@@ -679,12 +679,14 @@ The velocity of stellar wind is assumed to scale with the escape velocity, hence
 v \propto \sqrt{\frac{2GM_{\star }}{R_{\star }}}
 \end{equation}
 %%%
-Using these values for equations (\ref{eq:stand-off}) and (\ref{eq:stand-off-radius}) as well as the distance to the target, we can estimate the frequency and intensity by specifying the magnetic field and orbital distance of a hypothetical planetary companion. 
-Here, we consider two cases: (a) a Jupiter-twin at 5~AU whose cyclotron frequency is $\sim 30$~MHz, and (b) a larger Jovian planet with $M_p\sim 5M_p$ of 4.5 Gyrs old at 5~AU whose cyclotron frequency is $\sim 300$~MHz (equation (\ref{eq:scalingfc})). 
+Using these values for equations (\ref{eq:stand-off}) and (\ref{eq:stand-off-radius}) as well as the distance to the target, we can estimate the frequency and intensity of radio emission by specifying planetary mass and orbital distance of a hypothetical planetary companion. 
+Here, we consider [A] a Jupiter-twin whose cyclotron frequency is $\sim 30$~MHz, and [B] a larger Jovian planet with $M_p\sim 5M_p$ of 4.5 Gyrs old whose cyclotron frequency is $\sim 300$~MHz (equation (\ref{eq:scalingfc})).  
 
-Figure \ref{fig:observability} displays the estimated radio intensity and the maximum frequency (i.e., cyclotron frequency) of red giants within 100~pc.  
+Figure \ref{fig:observability} displays the estimated radio intensity and the maximum frequency (i.e., cyclotron frequency) of Jupiters [A] and [B] around red giants within 100~pc. 
+Jupiters [A] and [B] are placed at 1 AU and at 5 AU for reference. 
 The difference of the symbols indicates whether the radio emission can escape from the system (circle) or not (cross). 
 
+\memoYF{Up to where would the planet be engulfed by evolved stars? References?}
 
 \memoYF{discussion about detectability... Figures 1-3 of \citet{griesmeier2007b} show $10^{-3}$ Jy limit for 10-100 MHz (LWA, LOFAR) and $10^{-5}-10^{-4}$ Jy for 100-1000 MHz (LOFAR, SKA). }
 
