--- a/ms.tex
+++ b/ms.tex
@@ -388,10 +388,12 @@ m_p n v ^2 \sim \frac{B^2}{2\pi}\left( \frac{r_s}{R_p} \right)^{-6}  \label{eq:s
 %%%
 and therefore
 %%%
-\begin{equation}
-r_s \sim \left( \frac{B^2}{2\pi m_{\rm p}nv^2}
-\right)^{1/6}   \label{eq:stand-off-radius}
-\end{equation}
+\begin{eqnarray}
+r_s &\sim & R_p \left( \frac{B^2}{2\pi m_{\rm p}nv^2}
+\right)^{1/6}  \\
+&=& 7.57 R_p \left( \frac{B}{10~\mbox{G}} \right)^{1/3} \left( \frac{\dot M_{\star }}{\dot M_{\odot }} \right)^{-1/6}  \left( \frac{\dot v}{v_{\odot }} \right)^{-1/6} 
+ \label{eq:stand-off-radius}
+\end{eqnarray}
 %%%
 %\begin{eqnarray}
 %r_s &\sim& \left( \frac{\mu_0^2 \mathcal{M}^2}{8\pi^3 m_{\rm p}nv^2} \right)^{1/6} \\
@@ -829,7 +831,7 @@ NM acknowledges support from [???].
 
 \clearpage
 
-\end{document}
+%\end{document}
 
 \section{Dave's sketch}
 
