--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-05-26 12:10:02 +0900 
+%% Created for Yuka Fujii at 2015-05-26 20:53:47 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{griesmeier2005,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2005A%26A...437..717G},
+	Author = {{Grie{\ss}meier}, J.-M. and {Motschmann}, U. and {Mann}, G. and {Rucker}, H.~O.},
+	Date-Added = {2015-05-26 11:53:40 +0000},
+	Date-Modified = {2015-05-26 11:53:47 +0000},
+	Doi = {10.1051/0004-6361:20041976},
+	Journal = {\aap},
+	Keywords = {planetary systems, magnetic fields, radiation mechanisms: non-thermal, Sun: radio radiation, radio continuum: stars},
+	Month = jul,
+	Pages = {717-726},
+	Title = {{The influence of stellar wind conditions on the detectability of planetary radio emissions}},
+	Volume = 437,
+	Year = 2005,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361:20041976}}
 
 @article{griesmeier2007a,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
