--- a/ms.tex
+++ b/ms.tex
@@ -383,15 +383,16 @@ Because... \memoYF{I want to justify not to consider the magnetic case.}, we ass
 The radius of the magnetic stand-off point, $r_s$, is determined by the balance between the stellar wind pressure and the planetary magnetic pressure: 
 %%%
 \begin{equation}
-m_p n v ^2 \sim \frac{B^2}{2\pi}\left( \frac{r_s}{R_p} \right)^{-6}  \label{eq:stand-off}
+m_p n v ^2 \sim \frac{B^2}{8\pi}\left( \frac{r_s}{R_p} \right)^{-6}  \label{eq:stand-off}
 \end{equation}
 %%%
 and therefore
 %%%
 \begin{eqnarray}
-r_s &\sim & R_p \left( \frac{B^2}{2\pi m_{\rm p}nv^2}
+r_s &\sim & R_p \left( \frac{B^2}{8\pi m_{\rm p}nv^2}
 \right)^{1/6}  \\
-&=& 7.57 R_p \left( \frac{B}{10~\mbox{G}} \right)^{1/3} \left( \frac{\dot M_{\star }}{\dot M_{\odot }} \right)^{-1/6}  \left( \frac{\dot v}{v_{\odot }} \right)^{-1/6} 
+&=& 42.0 R_p \left( \frac{B}{10~\mbox{G}} \right)^{1/3} \left( \frac{\dot M_{\star }}{\dot M_{\odot }} \right)^{-1/6}  \left( \frac{\dot v}{v_{\odot }} \right)^{-1/6} \\
+&=& 6.16 R_p \left( \frac{B}{10~\mbox{G}} \right)^{1/3} \left( \frac{\dot M_{\star }}{10^6 \dot M_{\odot }} \right)^{-1/6}  \left( \frac{\dot v}{10^{-1}v_{\odot }} \right)^{-1/6} 
  \label{eq:stand-off-radius}
 \end{eqnarray}
 %%%
