--- a/ms.tex
+++ b/ms.tex
@@ -123,7 +123,7 @@ Neil Zimmerman\altaffilmark{7}
 \vspace{0.5\baselineskip}
 
 \email{
-dave@ias.edu
+yuka.fujii@elsi.jp
 }
 
 
@@ -155,34 +155,21 @@ It has been known that Jupiter emits radio emission from the radiation belt and 
 Potentially, large exoplanets can also emit radio waves through the similar mechanisms, depending on their intrinsic magnetic fields and the density of surrounding plasmas, e.g. stellar wind particles and particles from Io-like moons. 
 Radio emissions from exoplanets have been estimated taking account of several possible processes, based on the empirical scaling of the radio intensity with the solar wind flux \citep{zarka2001, griesmeier2007a, griesmeier2007b, hallinan_et_al2013, noyola2014}.
 Although the search for these radio signatures are being conducted, there is no clear detection claimed so far, while some indications were obtained \memoYF{?} \citep{lecavelier_et_al2013}. 
-%In general, there are four proposed models for a planet to emit radio wave \citep{griebmeier2007}: 1) the magnetic energy model, 2) kinetic energy model, 3) CME model, and 4) the unipolar interaction model. 
-%The search for these radio emissions from extrasolar Jovian planets has been performed. 
 
-
-%It has been predicted that
-% fix
 When stars less than $\sim$8~$M_\sun$ evolve off the main sequence,
 they go through stages on the red-giant branch (RGB) and the
 asymptotic-giant branch (AGB) where their radii and luminosities increase by orders of magnitude. 
 Jovian planets in orbit around such stars can be transiently heated to hot-Jupiter temperatures ($\sim$1000~K or more) at distances out to tens of AU, depending on the star's mass \citep{spiegel+madhusudhan2012}. 
 At the same time, they are subject to massive (but slow) stellar wind, as the mass-loss rate of such evolved stars are significantly higher than the main-sequence counterparts, ranging from $\sim  10^{-8} M_{\odot }$/yr to $\sim  10^{-5} M_{\odot }$/yr with the highest values for AGB stars \citep[e.g.,][]{reimers1975, schild1989, vassiliadis1993, schoier2001, vanloon2005}, significantly larger than solar mass-loss rate $\sim 10^{-14}M_{\odot }$/yr. 
-%\memoYF{to Jason: how these values are observationally obtained? Suggestions for relevant references?} 
-%stellar wind \citep{suzuki2008} \memoYF{To Jason: references?}. 
 On the assumption that the radio emission is correlated with the stellar wind, planetary companions around evolved stars could generate bright radio emission.
 
-In this paper we estimate the potential to detect planetary companions around evolved stars through the brightness of their radio emission.
-%The search for such emission could tell us the population of companions around evolved stars, including those were originally A or O stars. 
+In this paper we estimate the potential to detect planetary companions around evolved stars through the brightness of their radio emission. 
 In \S2, we describe our assumptions for the scaling of planetary radio emission, stellar wind, and planetary magnetosphere.
 \S3 presents a simple estimate of the spectral radio intensity of RGHJs and compares them with what might be expected from canonical hot Jupiters.
 \S3 also describes the surprising result that, although the planetary magnetic field is crucial to the generation of radio emission at all, there might be an important region in parameter space in which planets with stronger magnetic fields are less easily observable.
 \S4 discusses possible obstacles to detect radio emission from RGHJs, in particular the effects of intrinsic radio emission of evolved stars and the offsetting effect of the electrons spiraling down along the planetary magnetic field.
 Observability with current and near-future instruments is also examined in \S4. 
 Finally, \S5 concludes the paper with a brief summary. 
-% based on the number of targets in the observable volumes
-
-
-%Red giants lose their masses at a high rate, typically $\sim  10^{-5} M_{\odot }/yr $ through massive stellar wind. These stellar wind particle can 
-
 
 %Roughly 20\% of the more than 700 \memoYF{check!} currently known exoplanets around main-sequence stars \footnote{See online catalogs such as http://www.openexoplanetcatalogue.com/ \citep{rein2012}, http://exoplanet.eu \citep{schneider_et_al2011}, or http://exoplanets.org \citep{wright_et_al2011} for up-to-date lists.} have masses greater than half of Jupiter's, orbital radii greater than 1~AU, and will become hot Jupiters (i.e., for the present purposes, this means they will receive at least as much irradiation as the currently known hot Jupiters/Neptunes \citep{spiegel+madhusudhan2012}. 
 
@@ -206,23 +193,26 @@ Then, we discuss the framework to estimate the frequency and intensity of planet
 
 One important factor in modeling the radio emission due to the interaction with stellar wind and the planetary magnetic field is the density and velocity of stellar wind. 
 The number density of stellar wind, $n$, can be expressed as
-%%%
+%%%%%%%%%% 
 \begin{equation}
 n = \frac{\dot M_{\star }}{4\pi a^2 m_p v}
 \end{equation}
-%%%
+%%%%%%%%%% 
 where $\dot M_{\star }$ is the stellar mass loss rate, $a$ is the orbital distance from the star and $m_p$ is proton mass, and $v$ is the velocity of the stellar wind. 
 
 While the solar mass loss rate, $\dot M_{\odot }$, is $\dot M_{\odot } \sim 2\times 10^{-14} M_{\odot}$/yr \memoYF{reference needed?}, the mass loss rate of red giants is typically $\dot M_{\star } \sim 10^{-8}-10^{-7} M_{\odot}$/yr, ant the rate can be as high as $10^{-5} M_\odot{\rm /yr}$ during the AGB phase. 
 Therefore, we have
-%\memoDS{Can be as high as $10^{-5} M_\odot~{\rm yr^{-1}}$ during AGB phases.  I'm calling it ``red giant'' but we're really thinking of AGB stars for maximum mass-loss and brightness.}
+%%%%%%%%%% 
 \begin{equation}
 \frac{\dot M_{\star }}{\dot M_{\odot}} \sim 10^6 - 10^9
 \end{equation}
+%%%%%%%%%% 
 
 On the other hand, the stellar wind velocity becomes smaller because of the small escape velocity (due to expanded stellar radius).
 %\footnote{Escape velocity is $\sqrt{2GM/r}$.}
-Assuming that the stellar wind scales as the escape velocity, i.e., $\propto \sqrt{2GM_p/R}$ ($G$ is the gravitational constant, $M_p$ is the planetary mass, and $R$ is the planetary radius), a RG with radius $R=100R_{\odot}$ has 10 times as slow stellar wind as that at the main sequence. \memoYF{Estimate in more detail?} Thus, 
+Assuming that the stellar wind scales as the escape velocity, i.e., $\propto \sqrt{2GM_p/R}$ ($G$ is the gravitational constant, $M_p$ is the planetary mass, and $R$ is the planetary radius), a RG with radius $R=100R_{\odot}$ has 10 times as slow stellar wind as that at the main sequence. 
+%\memoYF{Estimate in more detail?} 
+Thus, 
 \begin{equation}
 \frac{v}{v_{\odot}} \sim 10^{-1}
 \end{equation}
@@ -246,7 +236,7 @@ Several relationships have been proposed so far \citep[e.g.][]{russel1978,busse1
 They are compared with numerical simulations in \citet{christensen2010}. We employ the following relationship from \citet{christensen2006}, which was found to be in a good agreement with the numerical experiments over a wide parameter space \memoYF{describe in more detail}:
 %%%%%%%%%% 
 \begin{equation}
-B^2 \propto \rho_c r_c^{4/3} q_c^{2/3}, \label{eq:Bscaling} % \omega ^{\alpha } \rho_c ^{\beta } r_c^{\gamma } \sigma ^{\delta } 
+B^2 \propto \rho_c r_c^{4/3} q_c^{2/3}, \label{eq:Bscaling} 
 \end{equation}
 %%%%%%%%%%
 where $\rho _c$ and $r_c$ are the density and the radius of the dynamo region, and $q_c$ is the internal convected energy flux in the core region. 
@@ -261,8 +251,7 @@ For the density profile, we assume a polytrope gas sphere with index $n=1$, whic
 \end{equation}
 %%%%%%%%%%
 We determine the core radius $r_c$ by assuming that the hydrogen becomes metallic when $\rho (r)$ exceeds the critical density $\rho_{\rm crit}=700\,\mbox{kg/m}^3$ \memoYF{cite something!}. The density of the metallic core, $\rho _c$ is obtained by averaging the density in the core. 
-In the case of Jupiter, $r_{c,\,J} = 0.85 R_{\rm J}$. 
-%We assume that the conductivity $\sigma $ is the same as Jupiter \memoYF{?}. 
+In the case of Jupiter, $r_{c,\,J} = 0.85 R_{\rm J}$.  
 
 The convected heat flux, $q_c$, is estimated by dividing the time-dependent net planetary luminosity by the surface area of the core region ($4\pi r_c^2$). 
 The model of luminosity evolution is taken from \citet{burrows_et_al2001} \citep[see also][]{marley2007}, which resulted in:
@@ -273,9 +262,7 @@ L \sim {10^{-8} L_\odot} \left( \frac{t}{1 \rm~Gyr} \right)^{-1.3} \left( \frac{
 \end{equation}
 %%%%%%%%%%
 \memoYF{Burrows et al. 2001 says $10^{-9} L_\odot $, but it looks to me like it is actually $10^{-8} L_\odot $}. 
-%We estimate the convected heat flux by dividing this energy flux by the surface area of the core region, i.e., $4 \pi r_c^2$. 
-%The internal heat flux of Jupiter is  $q_{c,\,J} \sim 5.4\,{\rm [W/m^2]}$ \citep{hanel1981}; this leads to the Jovian magnetic field $B_J \sim $
-is used for the scaling of planetary magnetic fields. 
+We estimate the convected heat flux by dividing this energy flux by the surface area of the core region, i.e., $4 \pi r_c^2$. 
 
 \memoYF{I am not sure if the following paragraph is needed.}
 There also exist several other scaling relations proposed so far, which is compared in \citet{christensen2010}. 
@@ -287,11 +274,9 @@ In particular, \citet{griesmeier2004} estimated radio emission of discovered exo
 %%%%%%%%%%
 where $\omega $ is the spin angular velocity and $\sigma $ is the conductivity of the ``dynamo region'', which is assumed to be same as Jupiter. 
 The scaling indexes are estimated to be $\alpha \sim 1/2-1$, $\beta \sim 1/2$, $\gamma \sim 3-4$, and $\sigma \sim -1/2-0$. 
-%In this paper, we assume $\alpha =1$, $\beta =1/2$, and $r_c = 7/2$ \citep{sano1993}. \memoYF{validity?}
+
 %
 Unlike canonical hot jupiters, RGHJs are not subject to tidal lock, as the gravitational effects of their host star does not change even if the star evolves into red giants. Without no physical insights of the typical spin rate, we could assume that of Jupiter: $\omega = 9.925$ [hr]. 
-%\memoYF{Would their spin rate become higher or lower??}
-%\memoDS{There's no reason to suspect either, although more massive planets might spin faster.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\subsection{Cut-off frequency}
@@ -304,32 +289,20 @@ Unlike canonical hot jupiters, RGHJs are not subject to tidal lock, as the gravi
 \label{ss:model_frequency}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%Radio emission intensity of Solar System giant planets are empirically shown to be proportional to the kinetic energy or the magnetic energy of the solar wind,  which interacts with planetary magnetic field at the magnetic standoff cross section\citep[``radio Bode's law''; ][]{desch+kaiser1984}. 
-%The detail of the mechanism of energy transport from the energy source into the radio emission. 
-
-%\subsection{}
 The peak of the auroral radio emission is around the cyclotron frequency of the planetary magnetic field, $f_{\rm cyc}$: 
-%In our assumption, the frequency band width is assumed to be scaled with the cyclotron frequency, $f_{\rm cyc}$: 
-%%%
+%%%%%%%%%% 
 \begin{equation}
 f_{\rm cyc} = \frac{eB}{2\pi m_e} \approx 27.9 {\rm~MHz} \left( \frac{B}{10 \rm~G} \right) \label{eq:cyc} 
-%\\
-%B &=& \frac{\mu_0}{2\pi}\frac{\mathcal{M}}{R_p^3} \\
-%&\sim & 9.1{\rm~G} \left( \frac{\mathcal{M}}{\mathcal{M}_J} \right) \left( \frac{R_p}{R_{p, J}} \right)^{-3}. 
 \end{equation}
-%%%
+%%%%%%%%%%
 where $e$ is the elementary charge ($=1.60\times10^{-19}$ C) and $m_e$ is the electron mass ($=9.10\times 10^{-31}$ kg). 
 
-%where $\mathcal{M}_J = 1.56 \times 10^{27} \mbox{A m}^2$. 
-%For magnetic field strengths in the vicinity of $\sim$25-50~Gauss (G),
-%the cyclotron frequency will be in the range $\sim$75-150~MHz.
-
 Radio emission from the planet is observable from ground only when the maximum frequency is larger than the plasma frequency of Earth's ionosphere,
-%%%
+%%%%%%%%%%
 \begin{equation}
 f_{\rm c1}\sim 10~\mbox{MHz}
 \end{equation}
-%%%
+%%%%%%%%%%
 {\it and} the maximum plasma frequency along the line of sight, $f_{\rm c2}$. 
 At the favorable condition where the planet is in the near side of the spherical plane, the maximum plasma frequency corresponds to that in the vicinity of the planet. Therefore, 
 %%%
@@ -354,7 +327,6 @@ f_{\rm c2} &\approx & 14.7{\rm~MHz} \left( \frac{a}{5~\mbox{AU}}\right)^{-1} \no
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 The auroral radio spectral flux of exoplanets observed at the Earth, $F_{\nu}$ can be expressed by:
-%Assuming $P_{\rm inp, J} = 2.1\times 10^{11}$ W \citep{griebmeier2007}, observed RGHJ radio emission at distance $l$ is
 %%%
 \begin{equation}
 F_{\nu} = \frac{P_{\rm radio}}{\Omega l^2 \Delta f}
@@ -363,7 +335,6 @@ F_{\nu} = \frac{P_{\rm radio}}{\Omega l^2 \Delta f}
 where $P_{\rm radio}$ is the energy that is deposited as radio emission of considered frequency range, $\Omega $ is the solid angle of the emission, $l$ is the distance between the target and the Earth, and $\Delta f$ is frequency band width. 
 
 We estimate the radio emission of exoplanets, $P_{\rm radio}$, simply by scaling the Jovian auroral radio emission with the input energy from stellar wind, in the same manner as \citet{griesmeier2007b}. 
-%, following the procedure of \citet{griebmeier2007}. 
 This is based on the empirical/apparent good correlation between the radio emission intensity of Solar System planets and the input kinetic energy or the magnetic energy of the solar wind \citep[``radio Bode's law''; ][]{desch+kaiser1984}, i.e.,
 %Namely, although the detail of the mechanism to generate planetary radio emission is not fully understood so far \memoYF{cite something?}, 
 %observations indicate that the total radio emission, $P_{\rm radio}$ is proportional to the input kinetic energy, $P_{\rm k,\,inp}$, or the input magnetic energy, $P_{\rm m,\,inp}$ \citep[``radio Bode's law''; ][]{desch+kaiser1984}:
@@ -396,21 +367,9 @@ r_s &\sim & R_p \left( \frac{B^2}{8\pi m_{\rm p}nv^2}
  \label{eq:stand-off-radius}
 \end{eqnarray}
 %%%
-%\begin{eqnarray}
-%r_s &\sim& \left( \frac{\mu_0^2 \mathcal{M}^2}{8\pi^3 m_{\rm p}nv^2} \right)^{1/6} \\
-%&=& 4.6 R_J \left( \frac{\mathcal{M}}{\mathcal{M}_J} \right)^{1/3} \left( \frac{\dot M}{\dot M_{\odot }} \right)^{-1/6} \left( \frac{v}{v_{\odot }} \right)^{-1/6}  
-%\end{eqnarray}
-%%%
 
 Thus, the radio emission, $P_{\rm radio}$, or equivalently the input kinetic energy, $P_{\rm k,\,inp}$, are estimated with $n$, $v$, and $\mathcal{M}$, which should be specified by assuming the properties of the stellar wind and the planetary magnetic field. 
 In the following, we describe our assumptions for these properties. 
-
-%Thus, 
-%r_s = \left[ \frac{\mu_0 f_0^2 \mathcal{M}}{8\pi^2 (m_p n(d) v(d)^2 + 2 n(d) k_B T)} \right]^{1/6}. 
-%\end{equation}
-%%%
-%where $\mathcal{M}$ is the planetary magnetic moment and $m_p$ is the proton mass.
-
 
 We assume that the solid angle of the emission is same as the Jupiter's one for all of the exoplanets. In reality, the solid angles of auroral radio emission from  Jupiter, Saturn, and Earth are $\sim 1.6$, $\sim $6.3, and $\sim $3.5, respectively \citep{desch+kaiser1984}, which are on the same order and will not significantly affect our order-of-magnitude estimate of radio emission. 
 
@@ -446,8 +405,6 @@ In this regime, there are a number of current and near-future radio wave detecto
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}[htbp]
-%   \plotoneh{r_c.pdf}
-%   \plotoneh{rho_c.pdf}
    \plotoneh{model_planetaryB.pdf}
    \caption{Planetary magnetic field as a function of age and planetary mass, based on the scaling of magnetic field of \citet{christensen2010} and the evolution of internal heat of \citet{burrows_et_al2001}. }
   \label{fig:planetaryB}
@@ -489,9 +446,8 @@ P_{\rm k,\,inp}
 \end{eqnarray}
 %%%
 Here, we normalized the strength of magnetic field of canonical hot jupiters with $B_J$, due to the uncertainty of the magnetic field of tidally-locked planets. 
-Depending on the modeling of magnetic field strength, there is also a speculation that the tidally-locked planets may have weaker magnetic field due to slow rotation \citep[e.g.][]{griesmeier2004}; in that case the radio emission will be even weaker. 
-\memoYF{This is based on theoretical prediction by \citet{griesmeier2004} that the tidally-locked planets have weaker magnetic field due to slow spin rotation. }
-\memoYF{what is the typical wind velocity of AGB stars?}
+Depending on the modeling of magnetic field strength, there is also a speculation that the tidally-locked planets may have weaker magnetic field due to slow rotation \citep[e.g.][]{griesmeier2004}; in that case the radio emission would be even weaker. 
+%\memoYF{This is based on theoretical prediction by \citet{griesmeier2004} that the tidally-locked planets have weaker magnetic field due to slow spin rotation. }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table}[htdp]
@@ -511,34 +467,12 @@ RGHJ & $M_J$ & $B_J$ & 5 AU &  0.4 days \\ \hline
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}[bp]
- %\begin{minipage}{0.5\hsize}
-  %\begin{center}
-   %\includegraphics[width=\hsize]{radio_emission_Mdot1e-8_constRp.pdf}
    \plotonesc{radio_emission_Mdot1e-8_constRp_christensen.pdf}
-  %\end{center}
- %\end{minipage}
- %\begin{minipage}{0.5\hsize}
-   %\begin{center}
-   %\includegraphics[width=\hsize]{radio_emission_Mdot1e-5_constRp.pdf}
    \plotonesc{radio_emission_Mdot1e-5_constRp_christensen.pdf}
-  %\end{center} 
- %\end{minipage}
    \caption{[{\bf New version: based on scaling relationship of Christensen 2010}] Top panel: Intensity of radio emission (in the unit of Jy) from a companion to a RG star (left) and an AGB star at 1 pc. The hashed region with vertical lines are not observable because of the plasma frequency cut-off of Earth's ionosphere. The hashed region with horizontal lines are not observable because of the plasma frequency cut-off of the stellar wind plasma in the vicinity of the companion. Bottom panel: cyclotron frequency, i.e., the frequency of radio emission. }
   \label{fig:radio}
 \end{figure*}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-
-
-
-%If we consider an AGB star with mass loss rate $\dot M \sim 10^{-5} M_{\odot }\mbox{/yr}~ (=10^9 \dot M_{\odot})$, then the flux goes up to $\sim 1 \mbox{~mJy}$. 
-%As the current detection limit of radio wave at $\sim 30 \mbox{~MHz}$ with Long Wavelength Array (LWA), for instance, is $\sim 1\mbox{~mJy}$ \memoYF{cite something}, this indicates that as the Sun evolves to ARB stage our Jupiter will eventually become so brilliant in radio wave that it can be detected from 100 pc away!
-%\memoYF{only if $v \sim 10^{-1} v_{\odot}$. Is this validated???}
-% <---- No, in this case f_plasma > 30 MHz
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\subsection{Observable spectral radio emission of RGHJs with varying mass and orbital distance}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -559,7 +493,6 @@ Combining the expressions above for the dependence of radio emission on planetar
 %%%
 \begin{eqnarray}
 F_{\nu} &=& \frac{P_{\rm radio}}{\Omega d^2 f_{\rm cyclotron}} \\
-%&=& P_{\rm radio,\,J} \\
 &\approx & 5.22\times 10^{-6} \mbox{Jy} \left( \frac{d}{10\mbox{~pc}} \right)^{-2}  \notag \\
 &&\times \left( \frac{B}{B_J} \right)^{-1/3}  \left( \frac{a}{5~\mbox{AU}} \right)^{-4/3} \notag \\
 && \times \left( \frac{\dot M_{\star }}{\dot M_{\odot}} \right)^{2/3} \left( \frac{v}{v_{\odot}} \right)^{5/3} \label{eq:F_nu} \\
@@ -579,15 +512,10 @@ F_{\nu} &=& \frac{P_{\rm radio}}{\Omega d^2 f_{\rm cyclotron}} \\
 &&\times \left( \frac{B}{B_J} \right)^{-1/3} \left( \frac{a}{0.05~\mbox{AU}} \right)^{-4/3} \notag \\ 
 && \times \left( \frac{\dot M_{\star }}{\dot M_{\odot}} \right)^{2/3} \left( \frac{v}{v_{\odot}} \right)^{5/3} \label{eq:F_nu_RGHJs} \\
 && \;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\; \mbox{(for canonical hot jupiters)} \notag 
-%\\
-%&\approx &  10^{-3} \mbox{Jy} \left( \frac{P_{\rm radio}}{200 P_{\rm radio, J}} \right) \left( \frac{l}{10\mbox{~pc}} \right)^{-2} \\
-%&&\times \left( \frac{\mathcal{M}}{\mathcal{M}_J} \right)^{-1} \left( \frac{R_p}{R_{p, J}} \right)^{3}
 \end{eqnarray}
 %%%
 Here, we used $P_{\rm radio,\,J}=2.1\times 10^{11}\mbox{~W}$ \citep{griesmeier2007b} \memoYF{cite original paper!}. 
 Therefore, RGHJs are expected to be intrinsically as bright as the closest hot Jupiters, and Jupiter-like planets around AGB stars are potentially orders-of-magnitude brighter than them. 
-
-%Note that the spectral radio flux increases as the magnetic moment decreases. 
 
 However, observed energy flux is limited by the plasma cut-off frequency in the vicinity of the planets. 
 This condition is:
@@ -610,11 +538,6 @@ or,
  && \times \left( \frac{\dot M_{\star }}{10^6 \dot M_{\odot}} \right)^{0.36}  \left( \frac{v}{10^{-1}v_{\odot}} \right)^{-0.36} \label{eq:Ma_limit}
 \end{eqnarray}
 %%%
-% 
-% \left( \frac{a}{5~\mbox{[AU]}} \right)  \\
-%&&> 2.2 \left( \frac{\dot M}{10^6 \dot M_{\odot}} \right)^{1/2}  \left( \frac{v}{10^{-1}v_{\odot}} \right)^{-1/2} \label{eq:Ba_limit}
-%\end{eqnarray}
-%%%
 Therefore, given any orbital distance, there is a lower mass limit for a planet to be able to release the  radio wave out of the system. 
 
 Substituting equation (\ref{eq:Ba_limit}) into equation (\ref{eq:F_nu_RGHJ}) leads to the maximum spectral radio flux at given orbital period:
@@ -624,8 +547,6 @@ F_{\nu} &<& 8 \times 10^{-3}~\mbox{Jy} \left( \frac{d}{10~\mbox{pc}} \right) \\
 && \times \left( \frac{a}{5~\mbox{AU}} \right)^{-1}  \left( \frac{\dot M_{\star }}{10^6 \dot M_{\odot}} \right)^{1/6} \left( \frac{v}{10^{-1} v_{\odot}} \right)^{13/6}
 \end{eqnarray}
 %%%
-%Since the dependence of the mass-loss rate is weak, even for evolved stars with significant mass loss rate (e.g. AGB stars), the upper limit of the stellar flux would not be changed by orders of magnitude. 
-%Thus, we may consider that the radio-brightest planetary systems at 10 pc would emit $\sim 10^{-2}$ Jy. 
 
 Figure \ref{fig:radio} shows the contours of spectral radio flux of planetary companions at 4.5~Gyr with varying masses and orbital distances. Here we assumed that the target system is located at a distance of 10~pc from the Earth. The flux can be scaled by the distance as a quadratic function. 
 The hashed regions indicate the parameter spaces where the radio emission from the planet cannot be observed due to the plasma cut-off frequency of the Earth's ionosphere as well as that of the target planetary system. 
@@ -690,14 +611,10 @@ Figure \ref{fig:observability} displays the estimated radio intensity and the ma
 Jupiters [A] and [B] are placed at 1 AU and at 5 AU for reference. 
 The difference of the symbols indicates whether the radio emission can escape from the system (circle) or not (cross). 
 
-\memoYF{Up to where would the planet be engulfed by evolved stars? References?}
+%\memoYF{Up to where would the planet be engulfed by evolved stars? References?}
+%I wondered this because if planets at 1 AU would be engulfed anyway it would not be worth discussing here. According to e.g. Nordhaus and Spiegel (2013) it is the case--however, some planets may migrate inward within 1 AU after evolution. So it should be ok. In any case this is not the main point of this paper and I would leave it out. 
 
 \memoYF{discussion about detectability... Figures 1-3 of \citet{griesmeier2007b} show $10^{-3}$ Jy limit for 10-100 MHz (LWA, LOFAR) and $10^{-5}-10^{-4}$ Jy for 100-1000 MHz (LOFAR, SKA). }
-
-
-%Figure \ref{fig:} displays the detection limit of current and near-future radio wave detectors. Between 10~MHz and 100~MHz the detection limit is $\sim 10^{-3}$~Jy. Therefore, Jovian planets around the nearest evolved stars would be within reach. 
-%On the other hand, between 100~MHz and 1~GHz where the cyclotron frequency of massive Jovian planets resides, SKA potentially achieve $10^{-5}$ Jy. In this range, massive planetary companion as far as 100 pc away would be marginally within the scope. 
-%We estimate the population of RGHJs within 100 pc to be order of 1000, based on the photometric dataset of Hipparcos. Thus, 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -739,8 +656,6 @@ The brightest emission due to interaction with planetary companion to the RGB st
 
 One might expect that plasma flowing into a region permeated by a magnetic field would, by spiraling around the field lines, generate an opposing magnetic field that partially cancels the intrinsic planetary magnetic field. 
 To estimate the strength of this effect, consider a uniform flow of particles of charge $e$, mass $m$, and velocity $v$ into a region of magnetic field $B$, spiraling along the initial magnetic field. 
-%The particles make a spiral motion inside the magnetic field and partially cancel the initial field. 
-%The canceling field $B_c$ can be estimated as follows. 
 A single charged particle moving perpendicular to the magnetic field moves in a circular orbit of radius 
 %%%
 \begin{equation}
@@ -814,7 +729,7 @@ Alternatively, once we detect both the gravitational perturbation and radio emis
 
 \vspace{0.5in}
 
-%\acknowledgements
+\acknowledgements
 
 {\sc Acknowledgments}
 
@@ -822,18 +737,13 @@ YF is supported from the Grant-in-Aid No. 25887024 by the Japan Society for the 
 DSS gratefully acknowledges support from a fellowship from the AMIAS group.
 NM acknowledges support from [???].
 
-%\newpage
-
-%mehrdad
-
-%\newpage
 
 \bibliography{biblio.bib}
 
 
 \clearpage
 
-%\end{document}
+\end{document}
 
 \section{Dave's sketch}
 
