reference is added

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,60 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-05-26 20:53:47 +0900 
+%% Created for Yuka Fujii at 2015-05-31 22:47:41 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{suzuki2007,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...659.1592S},
+	Author = {{Suzuki}, T.~K.},
+	Date-Added = {2015-05-31 13:47:36 +0000},
+	Date-Modified = {2015-05-31 13:47:41 +0000},
+	Doi = {10.1086/512600},
+	Eprint = {astro-ph/0608195},
+	Journal = {\apj},
+	Keywords = {Magnetic Fields, Stars: Coronae, Stars: Late-Type, Stars: Mass Loss, Stars: Winds, Outflows, Waves},
+	Month = apr,
+	Pages = {1592-1610},
+	Title = {{Structured Red Giant Winds with Magnetized Hot Bubbles and the Corona/Cool Wind Dividing Line}},
+	Volume = 659,
+	Year = 2007,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/512600}}
+
+@article{konstantinova2010,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2010A%26A...524A..57K},
+	Archiveprefix = {arXiv},
+	Author = {{Konstantinova-Antova}, R. and {Auri{\`e}re}, M. and {Charbonnel}, C. and {Drake}, N.~A. and {Schr{\"o}der}, K.-P. and {Stateva}, I. and {Alecian}, E. and {Petit}, P. and {Cabanac}, R.},
+	Date-Added = {2015-05-31 13:41:20 +0000},
+	Date-Modified = {2015-05-31 13:41:28 +0000},
+	Doi = {10.1051/0004-6361/201014503},
+	Eid = {A57},
+	Eprint = {1009.2001},
+	Journal = {\aap},
+	Keywords = {dynamo, magnetic fields, instrumentation: polarimeters, techniques: polarimetric, starts: activity, stars: evolution},
+	Month = dec,
+	Pages = {A57},
+	Primaryclass = {astro-ph.SR},
+	Title = {{Direct detection of a magnetic field in the photosphere of the single M giant EK Bootis. How common is magnetic activity among M giants?}},
+	Volume = 524,
+	Year = 2010,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/201014503}}
+
+@proceedings{exoplanets2006,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2006expl.conf.....Q},
+	Booktitle = {Saas-Fee Advanced Course 31: Extrasolar planets},
+	Date-Added = {2015-05-31 13:08:40 +0000},
+	Date-Modified = {2015-05-31 13:09:11 +0000},
+	Editor = {{Queloz}, D. and {Udry}, S. and {Mayor}, M. and {Benz}, W. and {Cassen}, P. and {Guillot}, T. and {Quirrenbach}, A.},
+	Keywords = {Extrasolar Planets},
+	Title = {{Extrasolar planets}},
+	Year = 2006}
 
 @article{griesmeier2005,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
